--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "postinstall:electron": "node postinstall",
     "ng": "ng",
     "start": "npm run postinstall:electron && npm-run-all -p ng:serve electron:serve",
-    "build": "npm run postinstall:electron && npm run electron:serve-tsc && ng build && node --experimental-modules prepare-build-dependencies.mjs",
-    "build:dev": "npm run build -- -c dev && node --experimental-modules prepare-build-dependencies.mjs",
-    "build:prod": "npm run build -- -c production && node --experimental-modules prepare-build-dependencies.mjs",
+    "build": "npm run postinstall:electron && npm run electron:serve-tsc && ng build",
+    "build:dev": "npm run build -- -c dev",
+    "build:prod": "npm run build -- -c production && node --experimental-modules prepare-build.mjs",
+    "prepare-build": "node --experimental-modules prepare-build.mjs",
     "ng:serve": "ng serve",
     "ng:serve:web": "npm run postinstall:web && ng serve -o",
     "electron:serve-tsc": "tsc -p tsconfig-serve.json",
@@ -34,14 +35,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.12.1",
+    "@angular/animations": "7.2.13",
+    "@angular/cdk": "^7.3.7",
     "@angular/cli": "7.3.3",
     "@angular/common": "7.2.7",
     "@angular/compiler": "7.2.7",
     "@angular/compiler-cli": "7.2.7",
     "@angular/core": "7.2.7",
-    "@angular/forms": "7.2.7",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.7",
     "@angular/http": "7.2.7",
     "@angular/language-service": "7.2.7",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "7.2.7",
     "@angular/platform-browser-dynamic": "7.2.7",
     "@angular/router": "7.2.7",
@@ -49,6 +54,7 @@
     "@ngx-translate/http-loader": "4.0.0",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.6",
     "@types/node": "8.9.4",
     "chai": "^4.2.0",
@@ -65,6 +71,7 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
+    "material-design-icons": "^3.0.1",
     "mocha": "6.0.2",
     "npm-run-all": "4.1.5",
     "rxjs": "6.4.0",
@@ -77,12 +84,16 @@
     "zone.js": "0.8.29"
   },
   "dependencies": {
+    "@types/fs-extra": "^5.0.5",
+    "appdata-path": "^1.0.0",
     "decompress": "^4.2.0",
     "decompress-targz": "^4.1.1",
     "decompress-unzip": "^4.0.1",
     "del": "^4.1.0",
     "fliplog": "^1.0.4",
     "fs-extra": "^7.0.1",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.11",
     "request": "^2.88.0",
     "request-progress": "^3.0.0"
   }
