Working on Linux

--- a/executable/application.properties
+++ b/executable/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:file:C:\\Users\\Darwin\\database;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:/home/carlos/data-class-recorder/data-class-recorder;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
@@ -14,7 +14,8 @@ spring.datasource.password=1234
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
-ffmpeg_directory=C:\\Users\\Darwin\\Documents\\my_projects\\electron-class-recorder\\dependencies\\ffmpeg.exe
-videos_folder=C:\\Users\\Darwin\\Videos\\Class-recorder
-temp_folder=C:\\Users\\Darwin\\AppData\\Roaming\\class-recorder-data\\temp
-output_ffmpeg=C:\\Users\\Darwin\\AppData\\Roaming\\class-recorder-data\\outputffmpeg
+ffmpeg_directory=/home/carlos/Documentos/my_projects/electron-class-recorder/dependencies/ffmpeg
+videos_folder=/home/carlos/Vídeos/crecorder
+temp_folder=/home/carlos/.config/class-recorder-data/temp
+output_ffmpeg=/home/carlos/.config/class-recorder-data/outputffmpeg
+
