--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "fs-extra": "^7.0.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
+    "ngx-ui-loader": "^7.2.2",
     "request": "^2.88.0",
     "request-progress": "^3.0.0"
   }
