--- a/executable/application.properties.template
+++ b/executable/application.properties.template
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:h2:file:${databaseDir};DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+server.port=37132
+
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/class-recorder?allowPublicKeyRetrieval=true&&useSSL=false
@@ -18,4 +20,3 @@ ffmpeg_directory=${ffmpegDirectory}
 videos_folder=${videos_folder}
 temp_folder=${temp_folder}
 output_ffmpeg=${output_ffmpeg}
-
