--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "class-recorder-electron",
+  "author": {
+    "name": "Carlos Ruiz",
+    "email": "carlos.ruizbal@gmail.com",
+    "url": "https://github.com/orgs/Class-Recorder/dashboard"
+  },
   "version": "1.0.0",
   "description": "Program to record programming and presentation classes",
   "keywords": [
@@ -62,7 +67,7 @@
     "conventional-changelog-cli": "2.0.11",
     "core-js": "2.6.1",
     "electron": "4.0.0",
-    "electron-builder": "20.36.2",
+    "electron-builder": "20.28.4",
     "electron-reload": "1.3.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -86,6 +91,7 @@
   "dependencies": {
     "@types/fs-extra": "^5.0.5",
     "appdata-path": "^1.0.0",
+    "axios": "^0.18.0",
     "decompress": "^4.2.0",
     "decompress-targz": "^4.1.1",
     "decompress-unzip": "^4.0.1",
